# snbb_scheduler

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  snbb_scheduler_spec.md
.github/workflows/: docs.yml
api/: index.html
api/audit/: index.html
api/checks/: index.html
api/config/: index.html
api/manifest/: index.html
api/monitor/: index.html
api/rules/: index.html
api/sessions/: index.html
api/submit/: index.html
cli/: index.html
cli/audit/: index.html
concepts/: index.html
configuration/: index.html
deface_wf/: graph.json  graph1.json
docs/: index.md  installation.md
examples/: add_procedure.py  bids_filters.json  inspect_pipeline.py  simulate_pipeline.py  snbb_config.yaml  trials.ipynb
installation/: index.html
plans/: implementation.md
scripts/: heuristic.py  mrtrix_tractography.yaml  qsirecon_full_spec.yaml  snbb_bids_post.py  snbb_fastsurfer_helper.py  snbb_recon_all_helper.py  snbb_run_bids.sh  snbb_run_bids_post.sh  snbb_run_defacing.sh  snbb_run_fastsurfer.sh  snbb_run_fastsurfer_cross.sh  snbb_run_fastsurfer_long.sh  snbb_run_fastsurfer_template.sh  snbb_run_freesurfer.sh  snbb_run_qsiprep.sh  snbb_run_qsirecon.sh
search/: search_index.json
site/: index.html  sitemap.xml
tests/: conftest.py  test_audit.py  test_auditor.py  test_checks.py  test_cli.py  test_config.py  test_fastsurfer.py  test_freesurfer.py  test_integration.py  test_log_analyzer.py  test_manifest.py  test_monitor.py  test_report.py  test_rules.py  test_sessions.py  test_submit.py
(+103 files in other folders)
