[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snbb-scheduler"
version = "0.1.0"
description = "Rule-based scheduler for SNBB neuroimaging processing pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
snbb-scheduler = "snbb_scheduler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=snbb_scheduler --cov-report=term-missing"
